crates/tests/libs/bindgen/data/error/callback_param_name_unique/input.rdl

#[win32]
mod Test {
    extern fn Handler(a: i32, a: i32);
}
        